--- a/score_process/score_process/score_process.vcxproj.filters
+++ b/score_process/score_process/score_process.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="event.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="json.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
